fix formatting of countdown on mobile

--- a/assets/index.css
+++ b/assets/index.css
@@ -190,6 +190,12 @@ header .brand {
 	padding-top:20px;
 	padding-bottom: 20px;
 }
+#countdown-container .line {
+	height:6px;
+	width:80px;
+	display:inline-block;
+	max-width: 7%;
+}
 .countdown-title {
 	padding-top: 25px;
 	padding-bottom: 25px;
